feat(security): implement stateful password rotation filter, spring shell commands, and paged rest response boundaries
- Implement PasswordChangeFilter to catch requests from users with an active pwd_chg_req token claim.
- Intercept unauthorized resource access paths and return an HTTP 403 Forbidden RFC 7807 ProblemDetail.
- Map the explicit error type URN urn:bookshelf:password-change-required inside the problem JSON payload.
- Configure SecurityConfig to register the PasswordChangeFilter immediately following the JwtAuthenticationFilter step.
- Add spring-shell-starter dependency to establish a console-based execution runtime environment.
- Implement AdminUserCommands component to expose a force-password-reset shell hook.
- Update CustomUserDetails to capture the passwordChangeRequired status flag from persistent user states.
- Rename internal variable parameters to isEnabled to mirror Spring Security's native User details interface mapping.
- Update CustomUserDetailsServiceImpl to evaluate passwordChangeRequired parameters and map custom BusinessException rules.
- Add PagedResponse generic record type to act as a framework-agnostic pagination transfer contract.
- Refactored AdminController and BookController endpoints to map content using PagedResponse instead of Spring Page objects.
- Expand JwtService unit tests to explicitly verify the boolean evaluation of the pwd_chg_req claim payload.
- Update UserControllerTest and BookControllerTest to assert response types against the new PagedResponse structure.
- Add V5__add_password_change_required_to_users.sql migration to establish NOT NULL constraint requirements.
- Refactor R__seed_dev_data.sql to seed data as per V5__add_password_change_required_to_users.sql schema.
- Update README.md with Admin Recovery CLI information